Fix posts title height overflow

--- a/src/pages/ProfilePage.css
+++ b/src/pages/ProfilePage.css
@@ -12,4 +12,5 @@
   font-weight: 600;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid var(--black);
+  height: 2.5rem;
 }
